# Starfish

./: .gitattributes  .gitignore  .gitmodules  .readthedocs.yml  .travis.yaml  .travis.yml  CHANGELOG.md  CITATION.bib  CONTRIBUTORS.md  GWOri.fits  GWOri_c.fits  GWOri_cf_fls.npy  GWOri_cn.fits  GWOri_cnm.fits  LICENSE.txt  MANIFEST.in  MCMC.py  PHOENIX_tools.py  Pipfile  Plotting.ipynb  README.md  Sparse Matrices.ipynb  __init__.py  _config.yml  bokeh_plot_model.py  cheb.py  class_parallel.py  comp_kurucz.py  conf.py  config.yaml  config_P22.yaml  config_P23.yaml  config_WASP14.yaml  config_WASP14_2.yaml  config_WASP14_BTSettl.yaml  config_WASP14_kurucz.yaml  constants.py  contributors.md  copy_HDF5.py  correlated.py  (+69 more)
0.2/: .buildinfo  cookbook.html  emulator.html  example_wasp14_sampling.html  grid_tools.html  objects.inv  quickstart.html  scripts.html  spectrum.html
1.0/: .buildinfo  MCMC.html  cookbook.html  emulator.html  example_wasp14.html  example_wasp14_data.html  example_wasp14_multi.html  genindex.html  grid_tools.html  index.html  model.html  objects.inv  overview.html  py-modindex.html  quickstart.html  scripts.html  search.html  searchindex.js  spectrum.html  tips_and_tricks.html  troubleshooting.html
Blaze/: 01.txt  02.txt  03.txt  04.txt  05.txt  06.txt  07.txt  08.txt  09.txt  10.txt  11.txt  12.txt  13.txt  14.txt  15.txt  16.txt  17.txt  18.txt  19.txt  20.txt  21.txt  22.txt  23.txt  24.txt  25.txt  26.txt  27.txt  28.txt  29.txt  30.txt  31.txt  32.txt  33.txt  34.txt  35.txt  36.txt  37.txt  38.txt  39.txt  40.txt  (+11 more)
Continuum_Fit/: B3Spline.py  atrous.py  data.txt
GWOri_c/: 01.txt  02.txt  03.txt  04.txt  05.txt  06.txt  07.txt  08.txt  09.txt  10.txt  11.txt  12.txt  13.txt  14.txt  15.txt  16.txt  17.txt  18.txt  19.txt  20.txt  21.txt  22.txt  23.txt  24.txt  25.txt  26.txt  27.txt  28.txt  29.txt  30.txt  31.txt  32.txt  33.txt  34.txt  35.txt  36.txt  37.txt  38.txt  39.txt  40.txt  (+11 more)
GWOri_cf/: 01.txt  02.txt  03.txt  04.txt  05.txt  06.txt  07.txt  08.txt  09.txt  10.txt  11.txt  12.txt  13.txt  14.txt  15.txt  16.txt  17.txt  18.txt  19.txt  20.txt  21.txt  22.txt  23.txt  24.txt  25.txt  26.txt  27.txt  28.txt  29.txt  30.txt  31.txt  32.txt  33.txt  34.txt  35.txt  36.txt  37.txt  38.txt  39.txt  40.txt  (+11 more)
GWOri_cn/: 01.txt  02.txt  03.txt  04.txt  05.txt  06.txt  07.txt  08.txt  09.txt  10.txt  11.txt  12.txt  13.txt  14.txt  15.txt  16.txt  17.txt  18.txt  19.txt  20.txt  21.txt  22.txt  23.txt  24.txt  25.txt  26.txt  27.txt  28.txt  29.txt  30.txt  31.txt  32.txt  33.txt  34.txt  35.txt  36.txt  37.txt  38.txt  39.txt  40.txt  (+11 more)
Starfish/: Emulate.ipynb  Plot_Run.ipynb  __init__.py  _config.py  astroseismic_align.py  config.py  config.yaml  constants.py  covariance.pyx  draw_emulator.py  em_cov.pyx  emulator.py  grid_tools.py  model.py  parallel.py  parallel_linear.py  plot_utils.py  samplers.py  single.py  spectrum.py  transforms.py  utils.py
StellarSpectra/: __init__.py  constants.py  cov_wrap.pyx  model.py  (+7 more)
(+1210 files in other folders)
