[build-system]
requires = ["poetry>=0.12", "wheel", "setuptools"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "astrostarfish"
version = "0.3.0-dev"
description = "Covariance tools for fitting stellar spectra"
license = "BSD-4-Clause"
authors = [
    "Ian Czekala <iancze@gmail.com>",
    "Miles Lucas <mdlucas@iastate.edu",
]
readme = "README.md"
repository = "https://github.com/iancze/Starfish"
documentation = "https://starfish.rtfd.io"
keywords = [
    "Science",
    "Astronomy",
    "Physics",
    "Data Science"
]
classifiers=[
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Topic :: Scientific/Engineering :: Physics",
]
packages = [
    { include = "Starfish" }
]

[tool.poetry.dependencies]
python = "^3.6"
emcee = "==3.0rc2"
numpy = "^1.16"
scipy = "^1.3"
scikit-learn = "^0.21.2"
astropy = "^3.1"
h5py = "^2.9"
tqdm = "^4.32"
extinction = "^0.4.0"
nptyping = "^0.2.0"
dataclasses = "^0.6.0"
toml = {git = "https://github.com/uiri/toml.git", branch="master"}

[tool.poetry.dev-dependencies]
pytest = "^4.6"
pylint = "^2.3"
rope = "^0.14.0"
pytest-cov = "^2.7"
doc8 = "^0.8.0"
sphinx = "^2.1"
coveralls = "^1.8"
sphinx-bootstrap-theme = "^0.7.1"
nbsphinx = "^0.4.2"
ipython = "^7.5"
mypy = "^0.701.0"
pytest-mypy = "^0.3.2"
black = {version = "^19.3b0",allows-prereleases = true}
pytest-black = "^0.3.7"
