[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "astrostarfish"
version = "0.3.0-dev"
description = "Covariance tools for fitting stellar spectra"
license = "BSD-4-Clause"
authors = [
    "Ian Czekala <iancze@gmail.com>",
    "Miles Lucas <mdlucas@iastate.edu",
]
readme = "README.md"
repository = "https://github.com/iancze/Starfish"
documentation = "https://starfish.rtfd.io"
keywords = [
    "Science",
    "Astronomy",
    "Physics",
    "Data Science"
]
classifiers = [
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Topic :: Scientific/Engineering :: Physics",
]
packages = [{include = "Starfish"}]

[tool.poetry.dependencies]
python = "^3.6"
astropy = "^3.1"
dataclasses = "^0.6.0"
emcee = "^3.0rc2"
extinction = "^0.4.0"
flatdict = {version = "^3.2.2", git = "https://github.com/mileslucas/flatdict"}
h5py = "^2.9"
nptyping = "^0.2.0"
numpy = "^1.16"
scikit-learn = "^0.21.2"
scipy = "^1.3"
toml = {version = "^0.10.1", git = "https://github.com/uiri/toml"}
tqdm = "^4.32"

[tool.poetry.dev-dependencies]
black = {version = "^19.3b0",allows-prereleases = true}
coveralls = "^1.8"
doc8 = "^0.8.0"
ipython = "^7.5"
mypy = "^0.701.0"
nbsphinx = "^0.4.2"
pylint = "^2.3"
pytest = "^4.6"
pytest-cov = "^2.7"
rope = "^0.14.0"
sphinx = "^2.1"
sphinx-bootstrap-theme = "^0.7.1"
